--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -231,6 +233,10 @@ body {
 #replay {
   z-index: 3;
   cursor: pointer;
+}
+
+*{
+  font-family: 'Single Day', cursive;
 }
 
 /* Media Queries */
