--- a/style/style.css
+++ b/style/style.css
@@ -235,7 +235,7 @@ body {
   cursor: pointer;
 }
 
-*{
+html{
   font-family: 'Single Day', cursive;
 }
 
@@ -243,6 +243,9 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+#hbd-chatbox{
+  font-family: 'Courier New', Courier, monospace;
+}
 /* Media Queries */
 @media screen and (max-height: 1000px) {
   .six .hat {
